--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ renderdoc = { version = "0.12.1", optional = true }
 env_logger = "0.10.2"
 chrono = "0.4.41"
 [features]
-default = ["renddoc", "validation", "api_dump"]
+default = ["validation"]
 renddoc = ["renderdoc"]
 api_dump = []
 loader_debug = []
